fixed overriding too much

--- a/app/assets/stylesheets/departments.css.scss
+++ b/app/assets/stylesheets/departments.css.scss
@@ -80,6 +80,11 @@
   color: white;
 }
 
+.panel {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
 .course-panel {
   @include flexbox();
   align-items: stretch;
@@ -89,6 +94,8 @@
   overflow: hidden;
   box-shadow: 0px 1px 2px 0px #B8B8B8;
   border-bottom: 1px solid #bfbfbf;
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 .course-title {
@@ -268,10 +275,10 @@
 }
 
 
-#content-container {
-  background-color: #eee !important;
-  box-shadow: none !important;
-  padding-top: 0px !important;
-  padding-left: 0px !important;
-  padding-right: 0px !important;
-}
+// #content-container {
+//   background-color: #eee !important;
+//   box-shadow: none !important;
+//   padding-top: 0px !important;
+//   padding-left: 0px !important;
+//   padding-right: 0px !important;
+// }
